# Agentic-RAG-Rust-Core-PFE-26

./: .dockerignore  .env  .env_exemple  .gitignore  .rag_cache.json  Dockerfile  PRESENTATION_FEATURES.md  README.md  agent.py  agents.py  api.py  api_ollama.py  api_ollama_corrupted.py  documents.txt  evaluate_multi_agent.py  figures_extractor.py  get_hardware_config.py  h -u origin main  hardware_config.json  log.txt  log1.txt  log2.txt  log3.txt  log4.txt  log5.txt  logs.text  logs.txt  logs_init.txt  main.py  old_weeks_presentation.tex  presentation.md  presentation.tex  profile_results.csv  profile_results_hybrid.csv  profile_results_python.csv  rag.py  rag_agentic.py  render.yaml  report.tex  requirements.txt  (+13 more)
agents/: base.py  evaluator.py  generator.py  refiner.py  retriever.py  selector.py  user_proxy.py
agents copy/: __init__.py  refiner.py
app/: __init__.py
eval_logs/: multi_agent_20260423_182230.json  multi_agent_20260423_184858.json  multi_agent_20260423_190846.json  multi_agent_20260423_195200.json  multi_agent_20260423_200610.json
extracted_images_with_context/: search_index.json  viewer.html
rag_rust/: Cargo.toml
rag_rust/src/: chunking.rs  cleaning.rs  dartboard.rs  embeddings.rs  lib.rs  pdf_ops.rs  runtime.rs  vector_store.rs
scripts/: benchmark.py  calibrate_hardware.py  rebuild_index.py
tests/: test copy.py  test.py  test_pdf_oxide.py  test_pdf_oxide_v2.py  test_semantic_sliding_window_chunker.py  test_sliding_window_chunker.py
unused_temp/: bench_rag.py  evaluate_multi_agent.py  profiling_script.py
utils/: __init__.py  chunking.py  (+2 more)
(+178 files in other folders)
