[package]
name = "rag_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rag_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
pdf_oxide = "0.3.30" 
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
lancedb = "0.14"
arrow-array = "53"
arrow-schema = "53"
once_cell = "1.21"
fastembed = "4.9.1"
futures = "0.3"
num_cpus = "1.16"
lopdf = "0.32"
pdfium-render = "0.8" 
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenvy = "0.15"